--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
-<td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: right;">✅</td>
 </tr>
 <tr>
@@ -799,7 +799,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">🔜</td>
-<td style="text-align: right;"></td>
+<td style="text-align: right;">🔜</td>
 </tr>
 </tbody>
 </table>
@@ -833,6 +833,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">NodeJs forge</th>
 <th style="text-align: center;">WebCrypto</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
@@ -844,6 +845,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 </tr>
@@ -862,6 +864,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">NodeJs forge</th>
 <th style="text-align: center;">WebCrypto</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
@@ -871,6 +874,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -885,7 +889,8 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td style="text-align: center;">❌</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_encryption_oaep_sha256_string.md">RSA OEAP padding SHA-256 String</a></td>
@@ -893,6 +898,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -914,6 +920,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">WebCrypto</th>
 <th style="text-align: center;">OpenSSL</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
@@ -923,6 +930,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -938,8 +946,9 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td style="text-align: center;">❌</td>
-<td style="text-align: center;">❌</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_pss_string.md">RSA String Signature PSS (full)</a></td>
@@ -947,6 +956,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -996,6 +1006,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">NodeJs forge</th>
 <th style="text-align: center;">Browser</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
@@ -1009,6 +1020,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_aes_gcm_hybrid_encryption_string.md">RSA AES GCM 256 hybrid encryption</a></td>
@@ -1016,6 +1028,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -1084,6 +1097,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">WebCrypto</th>
 <th style="text-align: center;">OpenSSL</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
@@ -1098,6 +1112,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/ecdsa_signature_der_string.md">ECDSA String Signature DER encoding </a></td>
@@ -1107,6 +1122,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -1122,6 +1138,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
@@ -1137,12 +1154,14 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">NodeJS</th>
 <th style="text-align: center;">Browser</th>
 <th style="text-align: center;">Python</th>
+<th style="text-align: center;">Go</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_overview.md">Libsodium overview</a></td>
 <td>general information about Libsodium (&quot;NaCl&quot;, &quot;Sodium&quot;) cryptography</td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -1159,6 +1178,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/curve25519_key_generation.md">generate a curve 25519 key pair</a></td>
@@ -1168,6 +1188,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr>
@@ -1179,6 +1200,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_ed25519_keypair.md">generate a curve ED25519 key pair</a></td>
@@ -1189,6 +1211,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_ed25519_keypair.md">generate a curve ED25519 public key from a private key</a></td>
@@ -1198,6 +1221,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr>
@@ -1209,10 +1233,12 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/argon2_parameter.md">Argon 2 parameter</a></td>
 <td>describes the parameters used in Argon 2 algorithm</td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -1229,10 +1255,12 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
-<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_secretbox_encryption_string.md">Libsodium authenticated string encryption with a random key</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_secretbox_encryption_string.md">Libsodium authenticated string encryption with a random key (secret box)</a></td>
 <td>encrypts a string on basis of a <strong>randomly generated encryption key</strong>, using the <strong>XSalsa20 stream cipher</strong> for encryption and the <strong>Poly1305 MAC</strong> for authentication</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -1249,6 +1277,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_sealedcryptobox_encryption_string.md">Libsodium sealed box authenticated hybrid string encryption</a></td>
@@ -1259,10 +1288,12 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_signature_detached_string.md">Libsodium string signature (detached) with a private-public key</a></td>
 <td>uses an ED25519 curve signature</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -1591,11 +1622,16 @@ based on dark.css by Vladimir Epifanov
 <tr>
 <td>Go</td>
 <td style="text-align: center;">repl.it</td>
-<td>version go1.14 linux/amd64</td>
+<td>version go 1.14 linux/amd64</td>
+</tr>
+<tr>
+<td>Go</td>
+<td style="text-align: center;">goplay.space</td>
+<td>version go 1.16.2</td>
 </tr>
 </tbody>
 </table>
-<p>Last update: Mar. 21st 2021</p>
+<p>Last update: Mar. 26th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
