--- a/index.html
+++ b/index.html
@@ -870,6 +870,18 @@ based on dark.css by Vladimir Epifanov
 </thead>
 <tbody>
 <tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_encryption_pkcs15_string.md">RSA PKCS 1.5 padding String</a></td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+</tr>
+<tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_encryption_oaep_sha1_string.md">RSA OEAP padding SHA-1 String</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -1747,7 +1759,7 @@ based on dark.css by Vladimir Epifanov
 </tr>
 </tbody>
 </table>
-<p>Last update: Apr. 07th 2021</p>
+<p>Last update: Apr. 21st 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
